linear constraints for MBITES parameters to MBDETES space

--- a/MASH-dev/SeanWu/MBITES/DESCRIPTION
+++ b/MASH-dev/SeanWu/MBITES/DESCRIPTION
@@ -27,10 +27,11 @@ Collate:
     'LANDSCAPE-Resource.R'
     'LANDSCAPE-Site.R'
     'LANDSCAPE-Sugar.R'
-    'MBDETES-Auxiliary.R'
+    'MBDETES-Calibration.R'
     'MBDETES-Model.R'
     'MBDETES-Parameters.R'
     'MBDETES-Setup.R'
+    'MBDETES-Transitions.R'
     'MBITES-Bionomics.R'
     'MBITES-Mosquito.R'
     'MBITES-BloodMeal.R'
