--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -40,10 +40,15 @@ export(MBDETES_PrLeave)
 export(MBDETES_PrOverfeed)
 export(MBDETES_PrOverfeed_calibrate)
 export(MBDETES_PrPPRFlight)
-export(MBDETES_PrPPRFlight_calibrate)
+export(MBDETES_PrPPRFlight_closure)
+export(MBDETES_PrPPRFlight_optim)
+export(MBDETES_PrPPRFlight_pars)
 export(MBDETES_PrRefeed)
-export(MBDETES_PrRefeed_calibrate)
+export(MBDETES_PrRefeed_closure)
+export(MBDETES_PrRefeed_optim)
+export(MBDETES_PrRefeed_pars)
 export(MBDETES_PrSurvive)
+export(MBDETES_PrSurvive_pars)
 export(MBDETES_R2R_ODE)
 export(MBDETES_R2R_solve)
 export(MBDETES_RestingParam)
