--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -37,6 +37,7 @@ export(MBDETES_MortalityPars)
 export(MBDETES_OstateTransitions)
 export(MBDETES_Parameters)
 export(MBDETES_PrLeave)
+export(MBDETES_PrLeave_pars)
 export(MBDETES_PrOverfeed)
 export(MBDETES_PrOverfeed_calibrate)
 export(MBDETES_PrPPRFlight)
@@ -54,6 +55,7 @@ export(MBDETES_R2R_solve)
 export(MBDETES_RestingParam)
 export(MBDETES_RperiodTransitions)
 export(MBDETES_StateTransitions)
+export(MBDETES_StateTransitions_Interp)
 export(MBDETES_SurvLaden)
 export(MBDETES_SurvUnladen)
 export(MBDETES_cohort_ODE)
