compute empirical state transition matrix from MBITES

--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -7,6 +7,7 @@ export(BFAB_PAR)
 export(BFAB_R2X)
 export(BFSB_F2X)
 export(BFSB_PAR)
+export(Bionomics_StateTransition)
 export(Bionomics_bloodIntervals)
 export(Bionomics_bloodfeedingRate)
 export(Bionomics_humanBitingProportion)
@@ -79,6 +80,7 @@ export(Site)
 export(Sugar_Resource)
 export(Tile)
 export(Tile_Initialize)
+export(fequal)
 export(hardreset)
 export(make_EggQ)
 export(make_ImagoQ)
