cleaning up bionomics and MBDETES approx functions for producing final graphics

--- a/MASH-dev/SeanWu/MBITES/DESCRIPTION
+++ b/MASH-dev/SeanWu/MBITES/DESCRIPTION
@@ -26,6 +26,7 @@ Collate:
     'LANDSCAPE-Resource.R'
     'LANDSCAPE-Site.R'
     'LANDSCAPE-Sugar.R'
+    'MBDETES-Bionomics.R'
     'MBDETES-Calibration.R'
     'MBDETES-Model.R'
     'MBDETES-Parameters.R'
