--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -7,6 +7,7 @@ export(BFAB_PAR)
 export(BFAB_R2X)
 export(BFSB_F2X)
 export(BFSB_PAR)
+export(Bionomics_MBDETES_Approx)
 export(Bionomics_StateTransition)
 export(Bionomics_bloodIntervals)
 export(Bionomics_bloodfeedingRate)
