--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -18,6 +18,7 @@ export(Bionomics_lifetimeOviposition)
 export(Bionomics_ovipositionInterval)
 export(Bionomics_ovipositionRate)
 export(Bionomics_vectorialCapacity)
+export(Bionomics_vectorialCapacityMosquito)
 export(ELAB_O2X)
 export(ELAB_PAR)
 export(ELSB_L2X)
