Bionomics_UniqueBites for VC but only counting unique secondary hotsts

--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -9,6 +9,7 @@ export(BFSB_F2X)
 export(BFSB_PAR)
 export(Bionomics_MBDETES_Approx)
 export(Bionomics_StateTransition)
+export(Bionomics_UniqueBites)
 export(Bionomics_bloodIntervals)
 export(Bionomics_bloodfeedingRate)
 export(Bionomics_humanBitingProportion)
