debug spatial VC

--- a/MASH-dev/SeanWu/MBITES/NAMESPACE
+++ b/MASH-dev/SeanWu/MBITES/NAMESPACE
@@ -10,8 +10,10 @@ export(BFSB_PAR)
 export(Bionomics_MBDETES_Approx)
 export(Bionomics_StateTransition)
 export(Bionomics_UniqueBites)
+export(Bionomics_absoluteDisperse)
 export(Bionomics_bloodIntervals)
 export(Bionomics_bloodfeedingRate)
+export(Bionomics_cumulativeDisperse)
 export(Bionomics_humanBitingProportion)
 export(Bionomics_humanBloodHost)
 export(Bionomics_lifespan)
