--- a/MASH-dev/SeanWu/MACRO-dev/MACRO/DESCRIPTION
+++ b/MASH-dev/SeanWu/MACRO-dev/MACRO/DESCRIPTION
@@ -8,6 +8,6 @@ Maintainer: Your Name <your@email.com>
 Description: One paragraph description of what the
       package does as one or more full sentences.
 License: GPL (>= 2)
-Imports: Rcpp (>= 0.12.19)
-LinkingTo: Rcpp
+Imports: Rcpp (>= 0.12.19), RcppArmadillo, RcppProgress
+LinkingTo: Rcpp (>= 0.12.19), RcppArmadillo, RcppProgress
 RoxygenNote: 6.1.0
