--- a/MASH-dev/SeanWu/MACRO-dev/MACRO/NAMESPACE
+++ b/MASH-dev/SeanWu/MACRO-dev/MACRO/NAMESPACE
@@ -2,10 +2,13 @@
 
 export(check_human_pfsi_conpars)
 export(human_pfsi_conpars)
+export(mosquito_rm_conpars)
+export(pars_obj)
 export(patch_conpars)
 export(patches_parameters)
 export(pevaxx_pfsi_conpars)
 export(pfsi_parameters)
+export(run_macro)
 import(Rcpp)
 import(RcppArmadillo)
 import(RcppProgress)
