--- a/MASH-dev/SeanWu/MACRO-dev/MACRO/NAMESPACE
+++ b/MASH-dev/SeanWu/MACRO-dev/MACRO/NAMESPACE
@@ -7,9 +7,9 @@ export(mosquito_rm_conpars)
 export(pars_obj)
 export(patch_conpars)
 export(patches_parameters)
-export(pevaxx_pfsi_conpars)
 export(pfsi_parameters)
 export(run_macro)
+export(vaccination_pfsi_conpars)
 import(Rcpp)
 import(RcppArmadillo)
 import(RcppProgress)
