--- a/MASH-dev/SeanWu/MACRO-dev/MACRO/NAMESPACE
+++ b/MASH-dev/SeanWu/MACRO-dev/MACRO/NAMESPACE
@@ -5,6 +5,7 @@ export(human_pfsi_conpars)
 export(mosquito_rm_conpars)
 export(pars_obj)
 export(patch_conpars)
+export(patch_ts_header_pfsi)
 export(patches_parameters)
 export(pfsi_human_output)
 export(pfsi_parameters)
