--- a/MASH-dev/SeanWu/uganda-ibm/macro-pfsi-package/macro.pfsi.rm/DESCRIPTION
+++ b/MASH-dev/SeanWu/uganda-ibm/macro-pfsi-package/macro.pfsi.rm/DESCRIPTION
@@ -7,7 +7,7 @@ Author: Who wrote it
 Maintainer: Who to complain to <yourfault@somewhere.net>
 Description: More about what it does (maybe more than one line)
 License: What license is it under?
-Imports: Rcpp (>= 1.0.1)
+Imports: Rcpp
 Depends: Rcpp, RcppArmadillo, RcppProgress
 LinkingTo: Rcpp, RcppProgress, RcppArmadillo
 RoxygenNote: 6.1.1
