--- a/MASH-dev/SeanWu/MBITES/DESCRIPTION
+++ b/MASH-dev/SeanWu/MBITES/DESCRIPTION
@@ -9,9 +9,9 @@ Description: More about what it does (maybe more than one line)
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.0
+RoxygenNote: 6.1.1
 Roxygen: list(markdown = TRUE)
-Imports: R6, futile.logger, pryr, jsonlite, spatstat, deSolve, R.utils, circlize
+Imports: R6, jsonlite, spatstat, deSolve
 ByteCompile: true
 Collate:
     'Auxiliary.R'
